--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <a href="C:\Users\cheye_000\Documents\2Web Development\My Hobbies.html">
       <h3>My Hobbies</h3>
     </a>
-    <a href="C:\Users\cheye_000\Documents\2Web Development\Contact Details.html">
+    <a href="https://github.com/CheyenneLeeLewis/CV2/blob/main/Contact%20Details.html">
       <h3>Contact me here!</h3>
     </a>
 </body>
